<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/home_img"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:baseline="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorNavigationText"
        android:layout_below="@+id/home_img" />
    <ImageView
        android:id="@+id/home_img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/poto" />
    <TextView
        android:id="@+id/home_tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NamaSendiri"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/AquaDanon"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/home_img_profile" />
    <TextView
        android:id="@+id/home_tv_tentangdiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TentangDiri"
        android:gravity="center"
        android:textColor="@color/whitethree"
        android:layout_below="@+id/home_tv_nama" />
    <View
        android:id="@+id/View1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/whitethree"
        android:layout_marginTop="10dp"
        android:layout_below="@id/home_tv_tentangdiri" />

    <TextView
        android:id="@+id/home_tv_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="-129dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="left"
        android:text="@string/Interest"
        android:textColor="@color/whitethree"
        android:textSize="20dp" />

</RelativeLayout>